--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "primer_tarea_nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,8 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "next": "^12.2.4",
-    "postcss-load-config": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
